WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272695
Regression(
277427@main
) Crash under AuxiliaryProcessProxy::notifyPreferencesChanged()
https://bugs.webkit.org/show_bug.cgi?id=272695
Summary
Regression(277427@main) Crash under AuxiliaryProcessProxy::notifyPreferencesC...
Chris Dumez
Reported
2024-04-15 12:42:48 PDT
Crash under AuxiliaryProcessProxy::notifyPreferencesChanged() since
277427@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-04-15 12:42:58 PDT
<
rdar://126492909
>
Chris Dumez
Comment 2
2024-04-15 12:45:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27277
EWS
Comment 3
2024-04-15 15:05:18 PDT
Committed
277514@main
(d6540a38e780): <
https://commits.webkit.org/277514@main
> Reviewed commits have been landed. Closing PR #27277 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug