Regression(277427@main) Crash under AuxiliaryProcessProxy::notifyPreferencesChanged() https://bugs.webkit.org/show_bug.cgi?id=272695 rdar://126492909

Reviewed by Per Arne Vollan.

We were using a HashMap to store preferences whose key was a std::pair<String, String>.
The first String was the domain and the second the preference name. However, for global
preferences, the domain is null, causing a crash when hashing the key.

To address an issue, we now store global preferences in a separate HashMap.

* Source/WebKit/Shared/AuxiliaryProcess.h:
* Source/WebKit/Shared/AuxiliaryProcess.messages.in:
* Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:
(WebKit::AuxiliaryProcess::preferencesDidUpdate):
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::didChangeThrottleState):
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
* Source/WebKit/UIProcess/Cocoa/AuxiliaryProcessProxyCocoa.mm:
(WebKit::AuxiliaryProcessProxy::notifyPreferencesChanged):

Canonical link: https://commits.webkit.org/277514@main